--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.2.0",
+    "@tailwindcss/typography": "^0.5.10",
     "ai": "^2.2.34",
     "lucide-react": "^0.325.0",
     "next": "14.1.0",
     "openai": "^4.27.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-markdown-it": "^1.0.2"
   },
   "devDependencies": {
     "@types/node": "^20",
