--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "openai": "^4.27.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-markdown-it": "^1.0.2"
+    "react-markdown-it": "^1.0.2",
+    "react-split": "^2.0.14"
   },
   "devDependencies": {
     "@types/node": "^20",
