--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.5.4",
     "@google/generative-ai": "^0.2.0",
     "@tailwindcss/typography": "^0.5.10",
     "ai": "^2.2.34",
     "lucide-react": "^0.325.0",
+    "negotiator": "^0.6.3",
     "next": "14.1.0",
     "openai": "^4.27.0",
     "react": "^18",
@@ -21,6 +23,7 @@
     "react-split": "^2.0.14"
   },
   "devDependencies": {
+    "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
