--- a/package.json
+++ b/package.json
@@ -15,15 +15,19 @@
     "@google/generative-ai": "^0.2.0",
     "@huggingface/inference": "^2.6.4",
     "@mistralai/mistralai": "^0.0.10",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@tailwindcss/typography": "^0.5.10",
     "ai": "^2.2.34",
+    "clsx": "^2.1.0",
     "lucide-react": "^0.325.0",
     "negotiator": "^0.6.3",
     "next": "14.1.0",
     "openai": "^4.27.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-markdown-it": "^1.0.2"
+    "react-markdown-it": "^1.0.2",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/negotiator": "^0.6.3",
