--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@mistralai/mistralai": "^0.0.10",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@tailwindcss/typography": "^0.5.10",
+    "@vercel/analytics": "^1.2.2",
+    "@vercel/speed-insights": "^1.0.10",
     "ai": "^2.2.34",
     "clsx": "^2.1.0",
     "lucide-react": "^0.325.0",
