--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.16.1",
     "@aws-sdk/client-bedrock-runtime": "^3.515.0",
     "@devbookhq/splitter": "^1.4.2",
     "@formatjs/intl-localematcher": "^0.5.4",
