--- a/package.json
+++ b/package.json
@@ -9,41 +9,47 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.18.0",
-    "@aws-sdk/client-bedrock-runtime": "^3.540.0",
+    "@ai-sdk/anthropic": "^0.0.5",
+    "@ai-sdk/google": "^0.0.5",
+    "@ai-sdk/mistral": "^0.0.4",
+    "@ai-sdk/openai": "^0.0.4",
+    "@ai-sdk/provider": "^0.0.0",
+    "@ai-sdk/provider-utils": "^0.0.1",
+    "@aws-sdk/client-bedrock-runtime": "^3.556.0",
     "@devbookhq/splitter": "^1.4.2",
     "@formatjs/intl-localematcher": "^0.5.4",
-    "@huggingface/inference": "^2.6.4",
+    "@huggingface/inference": "^2.6.7",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@tailwindcss/typography": "^0.5.10",
+    "@tailwindcss/typography": "^0.5.12",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
-    "ai": "^3.0.21",
+    "ai": "^3.0.24",
     "clsx": "^2.1.0",
     "lucide-react": "^0.325.0",
     "negotiator": "^0.6.3",
     "next": "14.1.0",
-    "openai": "^4.27.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "openai": "^4.38.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-external-links": "^3.0.0",
     "remark-gfm": "^4.0.0",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.3"
   },
   "devDependencies": {
     "@types/negotiator": "^0.6.3",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/node": "^20.12.7",
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
     "@types/react-syntax-highlighter": "^15.5.11",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.1.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5"
   }
 }
