--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^0.0.14",
+    "@ai-sdk/deepseek": "^0.1.10",
     "@ai-sdk/google": "^0.0.5",
     "@ai-sdk/mistral": "^0.0.4",
     "@ai-sdk/openai": "^0.0.13",
