--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@ai-sdk/deepseek": "^0.1.10",
     "@ai-sdk/fireworks": "^0.1.10",
     "@ai-sdk/google": "^0.0.5",
+    "@ai-sdk/groq": "^0.0.3",
     "@ai-sdk/mistral": "^0.0.4",
     "@ai-sdk/openai": "^0.0.13",
+    "@ai-sdk/perplexity": "^0.0.8",
     "@ai-sdk/provider": "^0.0.26",
     "@ai-sdk/provider-utils": "^0.0.1",
     "@aws-sdk/client-bedrock-runtime": "^3.749.0",
