--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@devbookhq/splitter": "^1.4.2",
     "@formatjs/intl-localematcher": "^0.5.10",
     "@huggingface/inference": "^2.8.1",
+    "@openrouter/ai-sdk-provider": "^0.2.2",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@tailwindcss/typography": "^0.5.16",
     "@vercel/analytics": "^1.5.0",
